Fixed profile on posts pages on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body>header {
 
 header #username{
     margin:0.5em 0.5em 0.5em 0;
+    padding-left:2em;
 }
 
 
@@ -128,7 +129,7 @@ header #username{
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    text-align: center;
+    text-align: left;
 }
 
 .dropdown li { 
@@ -138,7 +139,7 @@ header #username{
     padding: 0;
     border-bottom: solid black 1px;
 
-    margin-right:0.5em;
+    margin-right:1em;
 }
 
 .dropdown li a{
